--- a/css/style.css
+++ b/css/style.css
@@ -137,8 +137,8 @@ legend {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 100;
-  height: 100;
+  width: 100px;
+  height: 100px;
   border: 2px solid blue;
   border-radius: 50%;
   font-size: 50px;
